flux-snapshot/2023-04-20-19-26-04-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0425]: cannot find function, tuple struct or tuple variant `Cons` in this scope
  --> src/insertion_sort.rs:10:16
   |
10 |     let zero = Cons(0, Box::new(Nil));
   |                ^^^^ not found in this scope
   |
help: consider importing this tuple variant
   |
1  | use crate::insertion_sort::SortedList::Cons;
   |

error[E0425]: cannot find value `Nil` in this scope
  --> src/insertion_sort.rs:10:33
   |
10 |     let zero = Cons(0, Box::new(Nil));
   |                                 ^^^ not found in this scope
   |
help: consider importing this unit variant
   |
1  | use crate::insertion_sort::SortedList::Nil;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Cons` in this scope
  --> src/insertion_sort.rs:11:15
   |
11 |     let one = Cons(1, Box::new(zero));
   |               ^^^^ not found in this scope
   |
help: consider importing this tuple variant
   |
1  | use crate::insertion_sort::SortedList::Cons;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Cons` in this scope
  --> src/insertion_sort.rs:12:15
   |
12 |     let two = Cons(2, Box::new(one));
   |               ^^^^ not found in this scope
   |
help: consider importing this tuple variant
   |
1  | use crate::insertion_sort::SortedList::Cons;
   |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `sorting` (bin "sorting") due to 4 previous errors
